@@ -36,6 +36,10 @@ namespace ns3
 class RadvdInterface : public SimpleRefCount<RadvdInterface>
 {
 public:
+  typedef std::list<Ptr<RadvdPrefix> > RadvdPrefixList;
+  typedef std::list<Ptr<RadvdPrefix> >::iterator RadvdPrefixListI;
+  typedef std::list<Ptr<RadvdPrefix> >::const_iterator RadvdPrefixListCI;
+
   /**
    * \brief Constructor.
    * \param interface interface index
@@ -65,7 +69,7 @@ public:
    * \brief Get list of prefixes advertised for this interface.
    * \return list of IPv6 prefixes
    */
-  std::list <Ptr<RadvdPrefix> > GetPrefixes () const;
+  RadvdPrefixList GetPrefixes () const;
 
   /**
    * \brief Add a prefix to advertise on interface.
@@ -302,8 +306,6 @@ public:
   void SetIntervalOpt (bool intervalOpt);
 
 private:
-  typedef std::list<Ptr<RadvdPrefix> > RadvdPrefixList;
-  typedef std::list<Ptr<RadvdPrefix> >::iterator RadvdPrefixListI;
 
   /**
    * \brief Interface to advertise RA.
